# agents

./: .gitignore  GUI_PHASE_A_COMPLETE.md  GUI_PHASE_B_COMPLETE.md  GUI_ROADMAP.md  GUI_TESTING_RESULTS.md  IMPLEMENTATION_PLAN.md  PROOF_ARTIFACTS.md  README.md  TUI_COMPLETE.md  benchmark.db  benchmark.jsonl  benchmark_results.txt  business_value_report.md  capture_golden_master.py  case_study.md  chaos_debug.txt  chaos_debug_v2.txt  comparison_results.txt  contract_test_output.txt  control.json  dashboard_data.json  debug_drawdown.py  debug_load.py  debug_out_full.txt  debug_replay.py  debug_risk.txt  debug_risk_logic.py  debug_train.txt  engram.py  extreme_latency_results.txt  failure_test.jsonl  generate_risk_story.py  golden_run_baseline.json  latency_profiles_test_results.txt  latency_test.jsonl  latency_test_results.txt  main.py  manual_test_adversarial.py  manual_test_multi_agent.py  manual_test_refinement.py  (+39 more)
agents/: agent_registry.py  base_agent.py  baseline_agent.py  baseline_traders.py  collaborative_agent.py  grid_agent.py  hooks.py  learning_agent.py  prototypes.py  sim_adapter_agent.py  strategy_agents.py  warehouse_agent.py
benchmarking/: baseline.json  establish_baseline.py  long_run.json  simulation_quality.py
config/: settings.yaml  test_matrix.yaml
core/: base_task.py
dashboards/: app.py  logistics_dashboard.py
data/: memory.db  memory.db-shm  memory.db-wal
docs/: developer_guide.md
engram-desktop/: index.html  package.json
environments/: env_registry.py  grid_world.py  noisy_grid_world.py  order_book_env.py  robotics_sim.py  (+2 more)
(+273 files in other folders)
