[project]
name = "agent_forge"
version = "0.2.0"
description = "The Risk Verification Platform for Autonomous Agents"
requires-python = ">=3.9"
dependencies = [
    "typer>=0.9.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "websockets>=11.0",
    "pyyaml>=6.0",
    "rich>=13.0"
]

[project.scripts]
agent-forge = "agent_forge.cli:app"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["agent_forge"]

[tool.setuptools.package-dir]
"agent_forge" = "src/agent_forge"
